# adp-ref-lib-py

./: NOTICE  README.md  pyproject.toml
.gitea/workflows/: publish.yml
src/adp_manifest/: __init__.py  orchestrator.py  types.py  weighting.py
tests/: test_pr_merge.py
